# cisco-config-tool

./: .env.example  .gitignore  MCP_CLIENTS.md  README.md  pyproject.toml
cisco_config_tool/: agent.py  app.py  commands.py  connections.py  db.py  device_context.py  jobs.py  mcp_server.py  schemas.py  security.py  settings.py
cisco_config_tool/static/: app.js  index.html  styles.css
tests/: test_agent.py  test_commands.py
