[project]
name = "cisco-config-tool"
version = "0.1.0"
description = "MVP tool to configure Cisco network devices over SSH or console."
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0.0",
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "mcp[cli]>=1.27.0",
    "netmiko>=4.4.0",
    "openai>=2.0.0",
    "pydantic-settings>=2.6.0",
    "pyserial>=3.5",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
cisco-config-tool = "cisco_config_tool.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
